--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1713,6 +1713,7 @@ global without sharing virtual class Rollup {
             RollupOperation__c,
             RollupToUltimateParent__c,
             SplitConcatDelimiterOnCalcItem__c,
+            ShouldRunWithoutCustomSettingEnabled__c,
             (SELECT Id, FieldName__c, NullSortOrder__c, Ranking__c, SortOrder__c FROM RollupOrderBys__r ORDER BY Ranking__c, DeveloperName)
           FROM Rollup__mdt
           WHERE RollupControl__r.ShouldAbortRun__c = FALSE
