Adds namespaced package version support for managed packages and unlocked packages with namespaces to be able to use Apex Rollup as a dependency (see #359)

--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -16,7 +16,7 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
     public void execute(QueueableContext qc) {
       this.processor.countOfItems = this.processor.getNumberOfItems();
       if (this.processor.countOfItems > maxQueryRows) {
-        this.processor.startAsyncWork();
+        Database.executeBatch(this.processor, this.batchChunkSize);
       } else {
         this.processor.runSync();
       }
