--- a/rollup/core/classes/RollupLogger.cls
+++ b/rollup/core/classes/RollupLogger.cls
@@ -1,17 +1,14 @@
 public without sharing virtual class RollupLogger implements ILogger {
   @TestVisible
   // this gets updated via the pipeline as the version number gets incremented
-  private static final String CURRENT_VERSION_NUMBER = 'v1.5.24';
+  private static final String CURRENT_VERSION_NUMBER = 'v1.5.25';
   private static final LoggingLevel FALLBACK_LOGGING_LEVEL = LoggingLevel.DEBUG;
   private static final RollupPlugin PLUGIN = new RollupPlugin();
-  private static Boolean disabledMessageHasBeenLogged = false;
 
-  private final LoggingLevel currentLoggingLevel;
-  private final RollupControl__mdt rollupControl;
+  private final System.LoggingLevel currentLoggingLevel;
 
   protected RollupLogger() {
     this.currentLoggingLevel = this.getLogLevel();
-    this.rollupControl = Rollup.getDefaultControl();
   }
 
   public static final ILogger Instance {
@@ -30,16 +27,13 @@ public without sharing virtual class RollupLogger implements ILogger {
     void save();
   }
 
-  public virtual void log(String logString, LoggingLevel logLevel) {
+  public void log(String logString, LoggingLevel logLevel) {
     this.log(logString, null, logLevel);
   }
 
-  public void log(String logString, Object logObject, LoggingLevel logLevel) {
-    if (this.rollupControl?.IsRollupLoggingEnabled__c == true && logLevel.ordinal() >= this.currentLoggingLevel.ordinal()) {
+  public virtual void log(String logString, Object logObject, LoggingLevel logLevel) {
+    if (logLevel.ordinal() >= this.currentLoggingLevel.ordinal()) {
       this.innerLog(logString, logObject, logLevel);
-    } else if (this.rollupControl?.IsRollupLoggingEnabled__c == false && disabledMessageHasBeenLogged == false) {
-      disabledMessageHasBeenLogged = true;
-      this.innerLog('logging isn\'t enabled, no further output', null, LoggingLevel.DEBUG);
     }
   }
 
@@ -61,11 +55,7 @@ public without sharing virtual class RollupLogger implements ILogger {
     // not all Rollup-generated exceptions come with stacktraces - this is a known issue, where using "new DMLException().getStackTraceString()"
     // works to re-create the stacktrace for all of the calling code. we'll prune away any mentions to this class to keep the log size down
     List<String> innerStacktraces = new DMLException().getStackTraceString().split('\n');
-    while (
-      innerStacktraces.isEmpty() == false &&
-      (innerStacktraces.get(0).contains('Class.RollupLogger.log') || innerStacktraces.get(0).contains('Class.RollupLogger.CombinedLogger.log')) ||
-      innerStacktraces.get(0).contains('Class.RollupLogger.innerLog')
-    ) {
+    while (innerStacktraces.isEmpty() == false && innerStacktraces.get(0).contains(RollupLogger.class.getName())) {
       innerStacktraces.remove(0);
     }
     messages.add(String.join(innerStacktraces, '\n'));
@@ -131,46 +121,71 @@ public without sharing virtual class RollupLogger implements ILogger {
   }
 
   private static ILogger combineLoggers(List<RollupPlugin__mdt> loggingPlugins) {
-    ILogger rollLogger;
-    if (loggingPlugins.isEmpty()) {
-      return new RollupLogger();
-    }
-    RollupPlugin__mdt firstLogger = loggingPlugins.remove(0);
-    if (firstLogger.DeveloperName == RollupLogger.class.getName()) {
-      rollLogger = new RollupLogger();
-    } else {
-      try {
-        rollLogger = (ILogger) Type.forName(firstLogger.DeveloperName).newInstance();
-      } catch (Exception ex) {
+    List<ILogger> loggers = loggingPlugins.isEmpty() ? new List<ILogger>{ new RollupLogger() } : new List<ILogger>();
+    Boolean hasUsedBaseLogger = false;
+    List<String> potentialErrorMessages = new List<String>();
+
+    for (RollupPlugin__mdt loggerPlugin : loggingPlugins) {
+      ILogger rollLogger;
+      if (loggerPlugin.DeveloperName == RollupLogger.class.getName() && hasUsedBaseLogger == false) {
         rollLogger = new RollupLogger();
-        rollLogger.log('Falling back to default logger, cast to ILogger for:' + firstLogger.DeveloperName + ' failed', ex, LoggingLevel.WARN);
+        hasUsedBaseLogger = true;
+      } else {
+        try {
+          rollLogger = (ILogger) Type.forName(loggerPlugin.DeveloperName).newInstance();
+        } catch (Exception ex) {
+          potentialErrorMessages.add('Cast to ILogger failed for:' + loggerPlugin.DeveloperName);
+          if (hasUsedBaseLogger == false) {
+            rollLogger = new RollupLogger();
+            hasUsedBaseLogger = true;
+          }
+        }
+      }
+      if (rollLogger != null) {
+        loggers.add(rollLogger);
       }
     }
-    return loggingPlugins.isEmpty() ? rollLogger : new CombinedLogger(rollLogger, combineLoggers(loggingPlugins));
+
+    ILogger combinedLogger = new CombinedLogger(loggers, Rollup.getDefaultControl());
+    for (String potentialError : potentialErrorMessages) {
+      combinedLogger.log(potentialError, LoggingLevel.WARN);
+    }
+
+    return combinedLogger;
   }
 
   private class CombinedLogger implements ILogger {
-    private final ILogger first;
-    private final ILogger second;
+    private final List<ILogger> loggers;
 
-    public CombinedLogger(ILogger first, ILogger second) {
-      this.first = first;
-      this.second = second;
+    private RollupControl__mdt control;
+    private Boolean hasDisabledMessageBeenLogged = false;
+
+    public CombinedLogger(List<ILogger> loggers, RollupControl__mdt control) {
+      this.loggers = loggers;
+      this.control = control;
     }
 
     public void log(String logString, LoggingLevel logLevel) {
-      this.first.log(logString, logLevel);
-      this.second.log(logString, logLevel);
+      this.log(logString, null, logLevel);
     }
 
     public void log(String logString, Object logObject, LoggingLevel logLevel) {
-      this.first.log(logString, logObject, logLevel);
-      this.second.log(logString, logObject, logLevel);
+      if (this.control.IsRollupLoggingEnabled__c == false && this.hasDisabledMessageBeenLogged == false) {
+        this.hasDisabledMessageBeenLogged = true;
+        this.control.IsRollupLoggingEnabled__c = true;
+        this.log('logging isn\'t enabled, no further output', LoggingLevel.WARN);
+        this.control.IsRollupLoggingEnabled__c = false;
+      } else if (this.control.IsRollupLoggingEnabled__c) {
+        for (ILogger logger : this.loggers) {
+          logger.log(logString, logObject, logLevel);
+        }
+      }
     }
 
     public void save() {
-      this.first.save();
-      this.second.save();
+      for (ILogger logger : this.loggers) {
+        logger.save();
+      }
     }
   }
 }
