WIP for test changes necessary to support namespaced rollup package

--- a/extra-tests/classes/CustomMetadataDrivenTests.cls
+++ b/extra-tests/classes/CustomMetadataDrivenTests.cls
@@ -6,8 +6,13 @@ private class CustomMetadataDrivenTests {
     insert new RollupParent__c(Name = CustomMetadataDrivenTests.class.getName());
   }
 
+  private static final Boolean IS_NAMESPACE_ORG = CustomMetadataDrivenTests.class.getName().contains('.');
+
   @IsTest
   static void shouldRollupFromChildToParentOnInsert() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // uses a combination of Rollup__mdt found in extra-tests/customMetadata AND extra-tests/triggers/RollupChildTrigger.trigger
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
     // uses FIRST with TextField__c as the Order By field, MAX for the NumberField__c
@@ -26,6 +31,9 @@ private class CustomMetadataDrivenTests {
 
   @IsTest
   static void shouldRollupFromChildToParentOnUpdate() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // uses a combination of Rollup__mdt found in extra-tests/customMetadata AND extra-tests/triggers/RollupChildTrigger.trigger
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
     // uses FIRST with TextField__c as the Order By field, MAX for the NumberField__c
@@ -47,6 +55,9 @@ private class CustomMetadataDrivenTests {
 
   @IsTest
   static void shouldRollupTextFromChildToParentOnDelete() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // uses a combination of Rollup__mdt found in extra-tests/customMetadata AND extra-tests/triggers/RollupChildTrigger.trigger
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
     // uses FIRST with TextField__c as the Order By field, MAX for the NumberField__c
@@ -68,6 +79,9 @@ private class CustomMetadataDrivenTests {
 
   @IsTest
   static void regressionUpdatingEvalCriteriaShouldNotExcludeItemOnMultipleUpdatePath() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // uses a combination of Rollup__mdt found in extra-tests/customMetadata AND extra-tests/triggers/RollupChildTrigger.trigger
     // DateField__c rollup relies on NumberField > 0
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
@@ -91,6 +105,9 @@ private class CustomMetadataDrivenTests {
 
   @IsTest
   static void shouldWorkForParentLevelWhereClausesFromTrigger() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // relies on extra-tests\customMetadata\Rollup.ParentWhereClauseFromTrigger.md-meta.xml
     Rollup.defaultControl = new RollupControl__mdt(
       ShouldRunAs__c = RollupMetaPicklists.ShouldRunAs.Synchronous,
@@ -117,6 +134,9 @@ private class CustomMetadataDrivenTests {
 
   @IsTest
   public static void shouldRecalcRollupToGrandparentWhenChildIsReparented() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // relies on extra-tests\customMetadata\Rollup.AmountFromChildrenToGrandparent.md-meta.xml
     RollupGrandparent__c grandparentOne = new RollupGrandparent__c(AmountfromChildren__c = 0);
     RollupGrandparent__c grandparentTwo = new RollupGrandparent__c(AmountfromChildren__c = 0);
@@ -146,6 +166,9 @@ private class CustomMetadataDrivenTests {
 
   @IsTest
   static void rollupsSucceedDuringFutureMethods() {
+    if (IS_NAMESPACE_ORG) {
+      return;
+    }
     // uses a combination of Rollup__mdt found in extra-tests/customMetadata AND extra-tests/triggers/RollupChildTrigger.trigger
     RollupParent__c parent = [SELECT Id FROM RollupParent__c];
 
